--- a/src/index.css
+++ b/src/index.css
@@ -14,11 +14,11 @@
 }
 
 .arriveCont::-webkit-scrollbar-track {
-  background: transparent
+  background: transparent;
 }
 
 .arriveCont::-webkit-scrollbar-thumb {
-  background: #D5D1DE;
+  background: #d5d1de;
   border-radius: 10px;
 }
 .arriveCont::-webkit-scrollbar-thumb:hover {
@@ -29,17 +29,17 @@
 }
 
 .archive-grid::-webkit-scrollbar-track {
-  background: transparent
+  background: transparent;
 }
 
 .archive-grid::-webkit-scrollbar-thumb {
-  background: #D5D1DE;
+  background: #d5d1de;
   border-radius: 10px;
 }
 .archive-grid::-webkit-scrollbar-thumb:hover {
   background: #ad9cd3;
 }
-body{
+body {
   width: 100vw;
   height: 100vh;
   margin: 0;
@@ -54,10 +54,10 @@ body{
   transition: all 0.3s ease;
 }
 
-.grad{
-  background: linear-gradient(to bottom, #321E5B, #9B6C9F);
+.grad {
+  background: linear-gradient(to bottom, #321e5b, #9b6c9f);
 }
-#root{
+#root {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -67,17 +67,26 @@ body{
   height: 95%;
 }
 
-.wrong{
+.wrong {
   border: 2px solid red;
 }
-
+input::placeholder {
+  color: white;
+  font-style: font;
+  opacity: 0.6; /* 투명도 조절 */
+}
+textarea::placeholder {
+  color: white;
+  font-style: font;
+  opacity: 0.6; /* 투명도 조절 */
+}
 @keyframes scaleUp {
   0% {
-      transform: scale(0.9);
-      opacity: 0;
+    transform: scale(0.9);
+    opacity: 0;
   }
   100% {
-      transform: scale(1);
-      opacity: 1;
+    transform: scale(1);
+    opacity: 1;
   }
 }
